--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,37 @@
   background: none;
   text-align: left;
 }
+
+
+
+#carousel img {
+  
+}
+
+
+#carousel {
+  position:relative;
+  width:100%;
+  height:700px;
+
+  overflow:hidden;
+  font-size:0;  
+}
+
+#slides {
+  position:absolute;
+  left:0%;
+  width: 100%;
+  height:100%;
+}
+
+#next, #prev {
+  cursor:pointer;
+  width:50px;
+  height:50px;
+}
+
+#next {
+  left:auto;
+  right:25px;
+}
